TerminalPainter: Pass nextPos to hasSameWidth

This avoids jumpy selections when the text contains both English and
non-English characters.

BUG: 446655